# evalx

./: .env.sample  .gitignore  README.md  evalx
eval-client/: .env.sample  README.md  eval.py  evalx  explore_traces.py  inspect_dataset_item.py  pyproject.toml  quick_trace_check.py  test_dataset_conversion.py  test_metadata.py  trace.py  trace_debug.py  trace_simple.py
evalx_cli/: README.md  pyproject.toml  pytest.ini
evalx_cli/evalx_cli/: __init__.py  cli.py  client.py  config.py  mock_client.py
evalx_cli/tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_mock_client.py
evalx_sdk/: README.md  pyproject.toml  pytest.ini
evalx_sdk/evalx_sdk/: __init__.py  client.py  context.py  decorators.py  introspection.py  run.py  trace_dataset.py
evalx_sdk/tests/: __init__.py  conftest.py  test_client.py  test_context.py  test_decorators.py  test_introspection.py  test_run.py  test_trace_dataset.py
