[tool.poetry]
package-mode = false

[project]
name = "evalx_sdk"
version = "0.1.0"
description = "Python SDK for EvalX - Context management for evaluation tracking"
authors = [
    {name = "Apoorva Sareen",email = "apoorva@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11.9,<3.12"
dependencies = [
    "pydantic (>=2.0.0,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "psutil (>=5.9.0,<6.0.0)",
    "langfuse (>=3.10.0,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)",
    "responses (>=0.24.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
